--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
   "dependencies": {
     "browserify": "^9.0.7",
     "gulp": "^3.8.11",
+    "rangy": "^1.3.0-beta.2",
+    "react": "^0.13.1",
     "vinyl-source-stream": "^1.1.0"
   },
   "devDependencies": {
     "browserify": "^9.0.7",
     "gulp": "^3.8.11",
     "gulp-watch": "^4.2.4",
+    "reactify": "^1.1.0",
     "vinyl-source-stream": "^1.1.0"
   },
   "scripts": {
