--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
-  "name": "cflannExtension",
+  "name": "incognalio",
   "version": "0.0.1",
   "manifest_version": 2,
-  "description": "An awesome extension by Conor Flannigan",
+  "description": "The future of web browsing",
   "icons": {
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
@@ -17,28 +17,9 @@
   "browser_action": {
     "default_icon": "icons/icon19.png",
     "default_title": "browser action"
-    // "default_popup": "src/browser_action/browser_action.html"
   },
   "permissions": [
     "<all_urls>",
     "tabs"
   ]
-  // "content_scripts": [
-  //   {
-  //     "matches": [
-  //       "<all_urls>"
-  //     ],
-  //     "css": [
-  //       "src/inject/inject.css"
-  //     ]
-  //   },
-  //   {
-  //     "matches": [
-  //       "<all_urls>"
-  //     ],
-  //     "js": [
-  //       "src/inject/inject.js"
-  //     ]
-  //   }
-  // ]
 }
