--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "cflannExtension",
+  "name": "incognalio",
   "version": "1.0.0",
-  "description": "A CRX",
+  "description": "The future of web browsing",
   "main": "gulpfile.js",
   "dependencies": {
-    "browserify": "^9.0.7",
     "gulp": "^3.8.11",
     "rangy": "^1.3.0-beta.2",
     "react": "^0.13.1",
